--- a/markup/dev/index.html
+++ b/markup/dev/index.html
@@ -26,52 +26,50 @@
             <span class="navigation-opener-line"></span>
           </a>
           <div class="navigation-drop">
-            <div class="drop-content">
-              <ul class="nav-menu">
-                <li>
-                  <a href="#">home</a>
-                </li>
-                <li>
-                  <a href="#">about us</a>
-                </li>
-                <li>
-                  <a href="#">services</a>
-                </li>
-                <li>
-                  <a href="#">our works</a>
-                </li>
-                <li>
-                  <a href="#">contact</a>
-                </li>
-              </ul>
-              <ul class="soc-icons">
-                <li>
-                  <a href="#">
-                    <i class="icon-facebook facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="icon-twitter twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="icon-google google"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="icon-dribble dribble"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="icon-behance behance"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
+            <ul class="nav-menu">
+              <li>
+                <a href="#">home</a>
+              </li>
+              <li>
+                <a href="#">about us</a>
+              </li>
+              <li>
+                <a href="#">services</a>
+              </li>
+              <li>
+                <a href="#">our works</a>
+              </li>
+              <li>
+                <a href="#">contact</a>
+              </li>
+            </ul>
+            <ul class="soc-icons">
+              <li>
+                <a href="#">
+                  <i class="icon-facebook facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="icon-twitter twitter"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="icon-google google"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="icon-dribble dribble"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="icon-behance behance"></i>
+                </a>
+              </li>
+            </ul>
           </div>
         </nav>
       </div>
@@ -225,7 +223,7 @@
           <button type="button" class="button">show more</button>
         </div>
       </section>
-     <!--  <section class="carousel-section" style="background-image: url('img/carousel-section-back.png');">
+      <section class="carousel-section" style="background-image: url('img/carousel-section-back.png');">
         <div class="container">
           <div class="carousel-items slideshow">
             <div class="slideset">
@@ -241,12 +239,43 @@
                   </blockquote>
                 </div>
               </div>
+              <div class="slide">
+                <div class="items-image">
+                  <img src="img/carousel-image_1.png" alt="Image Description" width="120" height="120">
+                </div>
+                <div class="items-description">
+                  <blockquote cite="#">
+                    <q>These guys are incredible! I get my project in 10 days and it was awesome! Very good service!
+                      Highly recommendedguys are incredible! I get my project in 10 days and it was awesome! Very good service!
+                      Highly recommended!</q>
+                    <cite>John Smith</cite>
+                  </blockquote>
+                </div>
+              </div>
+              <div class="slide">
+                <div class="items-image">
+                  <img src="img/carousel-image_1.png" alt="Image Description" width="120" height="120">
+                </div>
+                <div class="items-description">
+                  <blockquote cite="#">
+                    <q>These guys arguys are incredible! I get my project in 10 days and it was awesome! Very good service!
+                      Highly recommendedguys are incredible! I get my project in 10 days and it was awesome! Very good service!
+                      Highly recommendede incredible! I get my project in 10 days and it was awesome! Very good service!
+                      Highly recommended!</q>
+                    <cite>John Smith</cite>
+                  </blockquote>
+                </div>
+              </div>
             </div>
+            <a href="#" class="btn-prev">
+              <i class="icon-left-arrow"></i>
+            </a>
+            <a href="#" class="btn-next">
+              <i class="icon-right-arrow"></i>
+            </a>
           </div>
-          <a href="#" class="btn-prev arrow-button left-arrow-button icon-left-arrow"></a>
-          <a href="#" class="btn-next arrow-button right-arrow-button icon-right-arrow"></a>
         </div>
-      </section> -->
+      </section>
       <section class="user-inf-section">
         <div class="container user-inf-wrapper">
           <div class="content-head">
