Added js for carousel and fix some bugs

--- a/markup/dev/index.html
+++ b/markup/dev/index.html
@@ -277,140 +277,229 @@
         </div>
       </section>
       <section class="user-inf-section">
-        <div class="container user-inf-wrapper">
+        <div class="container">
           <div class="content-head">
             <h2>OUR <span class="caption-element">TEAM</span></h2>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam
-              rem</p>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totamrem</p>
           </div>
-          <ul class="user-inf-content">
-            <li class="user-info-item">
-              <div class="item-image">
-                <a href="#">
-                  <img src="img/user-info-img_1.png" alt="Image Description" width="235" height="284">
-                </a>
+          <div class="carousel">
+            <div class="mask">
+              <div class="slideset">
+                  <div class="slide">
+                    <div class="item-image">
+                      <a href="#">
+                        <img src="img/user-info-img_1.png" alt="Image Description" width="235" height="284">
+                      </a>
+                    </div>
+                    <div class="item-description">
+                      <h3>catherina gail</h3>
+                      <ul class="soc-icons">
+                        <li>
+                          <a href="#">
+                            <i class="icon-facebook"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="icon-twitter"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="icon-google"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
+                    </div>
+                  </div>
+                  <div class="slide">
+                    <div class="item-image">
+                      <a href="#">
+                        <img src="img/user-info-img_2.png" alt="Image Description" width="262" height="315">
+                      </a>
+                    </div>
+                    <div class="item-description">
+                      <h3>harvey rube</h3>
+                      <ul class="soc-icons">
+                        <li>
+                          <a href="#">
+                            <i class="icon-facebook"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="icon-twitter"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="icon-google"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
+                    </div>
+                  </div>
+                  <div class="slide">
+                    <div class="item-image">
+                      <a href="#">
+                        <img src="img/user-info-img_3.png" alt="Image Description" width="236" height="284">
+                      </a>
+                    </div>
+                    <div class="item-description">
+                      <h3>janet pris</h3>
+                      <ul class="soc-icons">
+                        <li>
+                          <a href="#">
+                            <i class="icon-facebook"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="icon-twitter"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="icon-google"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
+                    </div>
+                  </div>
+                  <div class="slide">
+                    <div class="item-image">
+                      <a href="#">
+                        <img src="img/user-info-img_4.png" alt="Image Description" width="236" height="284">
+                      </a>
+                    </div>
+                    <div class="item-description">
+                      <h3>kevin ward</h3>
+                      <ul class="soc-icons">
+                        <li>
+                          <a href="#">
+                            <i class="icon-facebook"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="icon-twitter"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="icon-google"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
+                    </div>
+                  </div>
+                  <div class="slide">
+                      <div class="item-image">
+                        <a href="#">
+                          <img src="img/user-info-img_4.png" alt="Image Description" width="236" height="284">
+                        </a>
+                      </div>
+                      <div class="item-description">
+                        <h3>kevin ward</h3>
+                        <ul class="soc-icons">
+                          <li>
+                            <a href="#">
+                              <i class="icon-facebook"></i>
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#">
+                              <i class="icon-twitter"></i>
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#">
+                              <i class="icon-google"></i>
+                            </a>
+                          </li>
+                        </ul>
+                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
+                      </div>
+                    </div>
+                    <div class="slide">
+                        <div class="item-image">
+                          <a href="#">
+                            <img src="img/user-info-img_4.png" alt="Image Description" width="236" height="284">
+                          </a>
+                        </div>
+                        <div class="item-description">
+                          <h3>kevin ward</h3>
+                          <ul class="soc-icons">
+                            <li>
+                              <a href="#">
+                                <i class="icon-facebook"></i>
+                              </a>
+                            </li>
+                            <li>
+                              <a href="#">
+                                <i class="icon-twitter"></i>
+                              </a>
+                            </li>
+                            <li>
+                              <a href="#">
+                                <i class="icon-google"></i>
+                              </a>
+                            </li>
+                          </ul>
+                          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
+                        </div>
+                      </div>
+                      <div class="slide">
+                          <div class="item-image">
+                            <a href="#">
+                              <img src="img/user-info-img_4.png" alt="Image Description" width="236" height="284">
+                            </a>
+                          </div>
+                          <div class="item-description">
+                            <h3>kevin ward</h3>
+                            <ul class="soc-icons">
+                              <li>
+                                <a href="#">
+                                  <i class="icon-facebook"></i>
+                                </a>
+                              </li>
+                              <li>
+                                <a href="#">
+                                  <i class="icon-twitter"></i>
+                                </a>
+                              </li>
+                              <li>
+                                <a href="#">
+                                  <i class="icon-google"></i>
+                                </a>
+                              </li>
+                            </ul>
+                            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
+                          </div>
+                        </div>
+                </div>
               </div>
-              <div class="item-description">
-                <h3>catherina gail</h3>
-                <ul class="soc-icons">
-                    <li>
-                      <a href="#">
-                        <i class="icon-facebook"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="icon-twitter"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="icon-google"></i>
-                      </a>
-                    </li>
-                  </ul>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
-              </div>
-            </li>
-            <li class="user-info-item">
-              <div class="item-image">
-                <a href="#">
-                  <img src="img/user-info-img_2.png" alt="Image Description" width="262" height="315">
-                </a>
-              </div>
-              <div class="item-description">
-                <h3>harvey rube</h3>
-                <ul class="soc-icons">
-                    <li>
-                      <a href="#">
-                        <i class="icon-facebook"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="icon-twitter"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="icon-google"></i>
-                      </a>
-                    </li>
-                  </ul>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
-              </div>
-            </li>
-            <li class="user-info-item">
-              <div class="item-image">
-                <a href="#">
-                  <img src="img/user-info-img_3.png" alt="Image Description" width="236" height="284">
-                </a>
-              </div>
-              <div class="item-description">
-                <h3>janet pris</h3>
-                <ul class="soc-icons">
+              <div class="pagination">
+                <ul class="pg-items">
                   <li>
-                    <a href="#">
-                      <i class="icon-facebook"></i>
-                    </a>
+                    <a href="#"></a>
                   </li>
                   <li>
-                    <a href="#">
-                      <i class="icon-twitter"></i>
-                    </a>
+                    <a href="#"></a>
                   </li>
                   <li>
-                    <a href="#">
-                      <i class="icon-google"></i>
-                    </a>
+                    <a href="#"></a>
+                  </li>
+                  <li>
+                    <a href="#"></a>
                   </li>
                 </ul>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
               </div>
-            </li>
-            <li class="user-info-item">
-              <div class="item-image">
-                <a href="#">
-                  <img src="img/user-info-img_4.png" alt="Image Description" width="236" height="284">
-                </a>
-              </div>
-              <div class="item-description">
-                <h3>kevin ward</h3>
-                <ul class="soc-icons">
-                    <li>
-                      <a href="#">
-                        <i class="icon-facebook"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="icon-twitter"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="icon-google"></i>
-                      </a>
-                    </li>
-                  </ul>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
-              </div>
-            </li>
-          </ul>
-          <ul class="carousel-pg">
-            <li>
-              <a href="#"></a>
-            </li>
-            <li>
-              <a href="#"></a>
-            </li>
-            <li>
-              <a href="#"></a>
-            </li>
-            <li>
-              <a href="#"></a>
-            </li>
-          </ul>
+          </div>
         </div>
       </section>
       <section class="send-section" style="background-image: url('img/send-section-back.png');">
